--- a/orko-common/pom.xml
+++ b/orko-common/pom.xml
@@ -113,6 +113,11 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.dropwizard</groupId>
+      <artifactId>dropwizard-testing</artifactId>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.knowm.xchange</groupId>
