--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,37 @@
     <maven>3.0.0</maven>
   </prerequisites>
 
+  <url>http://github.com/badgerwithagun/orko</url>
+  <description>Orko is a web application which provides a unified UI and web service API to numerous cryptocurrency exchanges, allowing you to trade and manage your portfolio, even if it is spread across multiple exchanges, all from one screen, and without sharing your API keys with anyone.</description>
+  <inceptionYear>2018</inceptionYear>
+
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/ToastShaman/dropwizard-auth-jwt/issues</url>
+  </issueManagement>
+
+  <ciManagement>
+    <system>CircleCI</system>
+    <url>https://circleci.com/gh/badgerwithagun/orko</url>
+  </ciManagement>
+
+  <organization>
+    <name>Graham Crockford</name>
+    <url>http://github.com/badgerwithagun</url>
+  </organization>
+
+  <licenses>
+    <license>
+      <name>GNU Affero General Public License v3.0</name>
+      <url>https://www.gnu.org/licenses/agpl-3.0.txt</url>
+      <distribution>repo</distribution>
+      <comments>Permissions of this strongest copyleft license are conditioned on making available complete source code of licensed works and modifications, which include larger works using a licensed work, under the same license. Copyright and license notices must be preserved. Contributors provide an express grant of patent rights. When a modified version is used to provide a service over a network, the complete source code of the modified version must be made available.</comments>
+    </license>
+  </licenses>
+
   <groupId>com.grahamcrockford</groupId>
   <artifactId>orko-parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -150,6 +178,7 @@
     <maven-resources-plugin-version>3.1.0</maven-resources-plugin-version>
     <maven-surefire-plugin-version>2.22.1</maven-surefire-plugin-version>
     <frontend-maven-plugin-version>1.6</frontend-maven-plugin-version>
+    <license.maven.plugin.version>1.16</license.maven.plugin.version>
     <jacoco.version>0.8.1</jacoco.version>
     <mockito.version>1.10.19</mockito.version>
   </properties>
@@ -271,7 +300,7 @@
         <artifactId>dropwizard-websockets</artifactId>
         <version>${dropwizard-websockets-version}</version>
       </dependency>
-      
+
       <dependency>
         <groupId>org.knowm.xchange</groupId>
         <artifactId>xchange-core</artifactId>
@@ -317,7 +346,7 @@
         <artifactId>xchange-okcoin</artifactId>
         <version>${xchange.version}</version>
       </dependency>
-      
+
       <dependency>
         <groupId>com.github.badgerwithagun.xchange-stream</groupId>
         <artifactId>xchange-stream-core</artifactId>
@@ -338,7 +367,74 @@
         <artifactId>xchange-gdax</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
-      
+
     </dependencies>
   </dependencyManagement>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven.compiler.plugin.version}</version>
+          <configuration>
+            <source>1.8</source>
+            <target>1.8</target>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>${maven-dependency-plugin-version}</version>
+          <executions>
+            <execution>
+              <id>copy-dependencies</id>
+              <phase>package</phase>
+              <goals>
+                <goal>copy-dependencies</goal>
+              </goals>
+              <configuration>
+                <prependGroupId>true</prependGroupId>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <version>${license.maven.plugin.version}</version>
+          <configuration>
+            <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
+            <processStartTag>========================LICENSE_START=================================</processStartTag>
+            <processEndTag>=========================LICENSE_END==================================</processEndTag>
+            <includes>
+              <includes>**/*.java</includes>
+            </includes>
+          </configuration>
+          <executions>
+            <execution>
+              <id>download-licenses</id>
+              <goals>
+                <goal>download-licenses</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>generate-license-headers</id>
+              <goals>
+                <goal>update-file-header</goal>
+              </goals>
+              <phase>process-sources</phase>
+              <configuration>
+                <licenseName>agpl_v3</licenseName>
+                <roots>
+                  <root>src/main/java</root>
+                  <root>src/test/java</root>
+                </roots>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
