--- a/orko-ui/pom.xml
+++ b/orko-ui/pom.xml
@@ -14,6 +14,37 @@
 
   <name>Orko UI</name>
 
+  <profiles>
+    <profile>
+      <id>release</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>license-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>generate-license-headers</id>
+                <goals>
+                  <goal>update-file-header</goal>
+                </goals>
+                <phase>process-sources</phase>
+                <configuration>
+                  <includes>
+                    <includes>**/*.js</includes>
+                  </includes>
+                  <roots>
+                    <root>src</root>
+                  </roots>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
   <build>
     <resources>
       <resource>
@@ -65,15 +96,6 @@
         <artifactId>maven-jar-plugin</artifactId>
         <version>${maven.jar.plugin.version}</version>
       </plugin>
-      <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>license-maven-plugin</artifactId>
-          <configuration>
-            <includes>
-              <includes>**/*.js</includes>
-            </includes>
-          </configuration>
-        </plugin>
     </plugins>
   </build>
 </project>
