--- a/orko-worker/pom.xml
+++ b/orko-worker/pom.xml
@@ -13,7 +13,7 @@
 	<parent>
         <groupId>com.grahamcrockford</groupId>
         <artifactId>orko-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.1.0.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
