--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <groupId>com.grahamcrockford</groupId>
   <artifactId>orko-parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1.0.2</version>
   <packaging>pom</packaging>
 
   <modules>
@@ -127,7 +127,7 @@
     <dropwizard.version>1.3.5</dropwizard.version>
 
     <xchange.version>4.3.11</xchange.version>
-    <xchange.stream.version>4.3.12-SNAPSHOT</xchange.stream.version>
+    <xchange.stream.version>4.3.11.orko.3</xchange.stream.version>
 
     <streamex.version>0.6.7</streamex.version>
     <guice.version>4.2.1</guice.version>
