--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,12 @@
 
   <repositories>
     <repository>
-      <id>xchange-stream-mvn-repo</id>
-      <url>https://raw.github.com/badgerwithagun/xchange-stream/mvn-repo/</url>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>always</updatePolicy>
-      </snapshots>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+      <!-- <snapshots> -->
+      <!-- <enabled>true</enabled> -->
+      <!-- <updatePolicy>always</updatePolicy> -->
+      <!-- </snapshots> -->
     </repository>
   </repositories>
 
@@ -185,27 +185,22 @@
         <version>${xchange.version}</version>
       </dependency>
       <dependency>
-        <groupId>info.bitrich.xchange-stream</groupId>
+        <groupId>com.github.badgerwithagun.xchange-stream</groupId>
         <artifactId>xchange-stream-core</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
-        <groupId>info.bitrich.xchange-stream</groupId>
+        <groupId>com.github.badgerwithagun.xchange-stream</groupId>
         <artifactId>xchange-binance</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
-        <groupId>info.bitrich.xchange-stream</groupId>
+        <groupId>com.github.badgerwithagun.xchange-stream</groupId>
         <artifactId>xchange-bitfinex</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
       <dependency>
-        <groupId>info.bitrich.xchange-stream</groupId>
-        <artifactId>xchange-okcoin</artifactId>
-        <version>${xchange.stream.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>info.bitrich.xchange-stream</groupId>
+        <groupId>com.github.badgerwithagun.xchange-stream</groupId>
         <artifactId>xchange-gdax</artifactId>
         <version>${xchange.stream.version}</version>
       </dependency>
