--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
     },
     "JAVA_OPTS": {
       "description": "You generally shouldn't need to change any of this. It's been well tuned for a Hobby Heroku instance.",
-      "value": "-server -Xmx185m -Xms185m -Xss256k -XX:MaxMetaspaceSize=80m -XX:+UseG1GC -Dsun.net.inetaddr.ttl=60 -Dio.netty.leakDetectionLevel=advanced"
+      "value": "-server -Xmx185m -Xms185m -Xss256k -XX:MaxMetaspaceSize=80m -XX:+UseG1GC -Dsun.net.inetaddr.ttl=60 -Dio.netty.leakDetectionLevel=advanced -javaagent:/app/sqreen.jar"
     },
     "MAVEN_CUSTOM_GOALS": {
       "description": "Used by the Heroku buildpack. Do not change.",
