--- a/orko-all-in-one/pom.xml
+++ b/orko-all-in-one/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
@@ -60,25 +59,6 @@
               <execution>
                 <id>default-jar</id>
                 <phase>none</phase>
-              </execution>
-            </executions>
-          </plugin>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>wagon-maven-plugin</artifactId>
-            <version>1.0</version>
-            <executions>
-              <execution>
-                <id>download-sqreen</id>
-                <phase>package</phase>
-                <goals>
-                  <goal>download-single</goal>
-                </goals>
-                <configuration>
-                  <url>https://download.sqreen.io</url>
-                  <fromFile>java/sqreen.jar</fromFile>
-                  <toFile>${project.build.directory}/../../sqreen.jar</toFile>
-                </configuration>
               </execution>
             </executions>
           </plugin>
