--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
@@ -174,13 +175,13 @@
     <xchange.stream.version>4.3.11.orko.3</xchange.stream.version>
 
     <streamex.version>0.6.7</streamex.version>
-    <guice.version>4.2.1</guice.version>
+    <guice.version>4.2.2</guice.version>
     <guava.version>27.0-jre</guava.version>
     <autovalue.version>1.6.2</autovalue.version>
     <rabbitmq.version>5.4.3</rabbitmq.version>
-    <mongo.version>3.7.0</mongo.version>
-    <mongojack.version>2.8.2</mongojack.version>
-    <mapdb.version>3.0.7</mapdb.version>
+    <morf.version>0.1.3</morf.version>
+    <j00q.version>3.11.7</j00q.version>
+
     <reflections.version>0.9.11</reflections.version>
     <googleauth.version>1.1.5</googleauth.version>
     <okta-jwt-verifier-version>0.3.0</okta-jwt-verifier-version>
@@ -200,6 +201,7 @@
     <checkstyle.version>8.12</checkstyle.version>
     <jacoco.version>0.8.1</jacoco.version>
     <mockito.version>1.10.19</mockito.version>
+    <hamcrest.version>1.3</hamcrest.version>
   </properties>
 
   <!--<build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
@@ -265,30 +267,44 @@
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>one.util</groupId>
-        <artifactId>streamex</artifactId>
-        <version>${streamex.version}</version>
+        <groupId>org.hamcrest</groupId>
+        <artifactId>hamcrest-core</artifactId>
+        <version>${hamcrest.version}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>com.rabbitmq</groupId>
         <artifactId>amqp-client</artifactId>
         <version>${rabbitmq.version}</version>
       </dependency>
+
       <dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongo-java-driver</artifactId>
-        <version>${mongo.version}</version>
+        <groupId>org.alfasoftware</groupId>
+        <artifactId>morf-core</artifactId>
+        <version>${morf.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.mongojack</groupId>
-        <artifactId>mongojack</artifactId>
-        <version>${mongojack.version}</version>
+        <groupId>org.alfasoftware</groupId>
+        <artifactId>morf-testsupport</artifactId>
+        <version>${morf.version}</version>
+        <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>org.mapdb</groupId>
-        <artifactId>mapdb</artifactId>
-        <version>${mapdb.version}</version>
+        <groupId>org.alfasoftware</groupId>
+        <artifactId>morf-h2</artifactId>
+        <version>${morf.version}</version>
       </dependency>
+      <dependency>
+        <groupId>org.alfasoftware</groupId>
+        <artifactId>morf-mysql</artifactId>
+        <version>${morf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jooq</groupId>
+        <artifactId>jooq</artifactId>
+        <version>${j00q.version}</version>
+      </dependency>
+
       <dependency>
         <groupId>com.google.inject.extensions</groupId>
         <artifactId>guice-servlet</artifactId>
