Hacked a load of stuff into Morf and forked it so it works...

--- a/orko-all-in-one/example-config.yml
+++ b/orko-all-in-one/example-config.yml
@@ -16,7 +16,7 @@ auth:
 #    issuer: THE
 #    clientId: README
 database:
-  jdbcUrl: jdbc:h2:file:orko.db
+  connectionString: h2:file:./orko
 # telegram:
 #   botToken: YOU
 #   chatId: REALLYWANTTHIS
