--- a/pom.xml
+++ b/pom.xml
@@ -179,8 +179,9 @@
     <guava.version>27.0-jre</guava.version>
     <autovalue.version>1.6.2</autovalue.version>
     <rabbitmq.version>5.4.3</rabbitmq.version>
-    <morf.version>0.1.3</morf.version>
+    <morf.version>0.1.3.badgerwithagun.1</morf.version>
     <j00q.version>3.11.7</j00q.version>
+    <mysql.connector.version>8.0.13</mysql.connector.version>
 
     <reflections.version>0.9.11</reflections.version>
     <googleauth.version>1.1.5</googleauth.version>
@@ -279,23 +280,28 @@
       </dependency>
 
       <dependency>
-        <groupId>org.alfasoftware</groupId>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>${mysql.connector.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.github.badgerwithagun.morf</groupId>
         <artifactId>morf-core</artifactId>
         <version>${morf.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.alfasoftware</groupId>
+        <groupId>com.github.badgerwithagun.morf</groupId>
         <artifactId>morf-testsupport</artifactId>
         <version>${morf.version}</version>
         <scope>test</scope>
       </dependency>
       <dependency>
-        <groupId>org.alfasoftware</groupId>
+        <groupId>com.github.badgerwithagun.morf</groupId>
         <artifactId>morf-h2</artifactId>
         <version>${morf.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.alfasoftware</groupId>
+        <groupId>com.github.badgerwithagun.morf</groupId>
         <artifactId>morf-mysql</artifactId>
         <version>${morf.version}</version>
       </dependency>
